--- a/LSTM/LSTM_Análise_de_Sentimentos.ipynb
+++ b/LSTM/LSTM_Análise_de_Sentimentos.ipynb
@@ -6,6 +6,7 @@
       "name": "LSTM-Análise-de-Sentimentos.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,11 +95,11 @@
       "source": [
         "Para entender como a aprendizagem profunda pode ser aplicada, pense em todas as diferentes formas de dados que são usadas como insumos em modelos de aprendizagem de máquina ou aprendizagem profunda. As redes neurais convolucionais usam matrizes de valores de pixels, a regressão logística usa recursos quantificáveis e os modelos de aprendizado por reforço usam sinais de recompensa. O tema comum é que as insumos precisam ser valores escalares, ou matrizes de valores escalares. Quando você pensa em tarefas de PLN, no entanto, um pipeline de dados como este pode vir à mente.\n",
         " \n",
-        "![caption](Images/SentimentAnalysis.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis.png)\n",
         "\n",
         "Este tipo de pipeline é problemático. Não há como fazer operações comuns como dot product ou backpropagation em uma única string. Em vez de ter uma entrada de string, precisamos converter cada palavra na frase em um vetor.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis2.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis2.png)\n",
         "\n",
         "Você pode pensar na entrada do módulo de análise de sentimento como sendo uma matriz dimensional de 16 x D."
       ]
@@ -112,7 +113,7 @@
       "source": [
         "Queremos que esses vetores sejam criados de tal forma que representem a palavra e seu contexto, significado e semântica. Por exemplo, gostaríamos que os vetores para as palavras \"amor\" e \"adorar\" residissem em relativamente a mesma área no espaço vetorial, uma vez que ambos possuem definições semelhantes e ambos são usados em contextos semelhantes. A representação vetorial de uma palavra também é conhecida como word embedding.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis8.png)"
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis8.png)"
       ]
     },
     {
@@ -134,11 +135,11 @@
       "source": [
         "Para criar estes word embeddings, usaremos um modelo chamado \"Word2Vec\" (não deixe de ler o pdf fornecido anteriormente neste capítulo). Esse modelo cria vetores de palavras, observando o contexto com o qual as palavras aparecem nas frases. As palavras com contextos semelhantes serão colocadas próximas no espaço vetorial. Em linguagem natural, o contexto das palavras pode ser muito importante ao tentar determinar seus significados. Tomando nosso exemplo anterior das palavras \"adorar\" e \"amar\", considere os tipos de frases em que encontraríamos essas palavras.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis9.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis9.png)\n",
         "\n",
         "Do contexto das frases, podemos ver que ambas as palavras são geralmente usadas em frases com conotações positivas e geralmente precedem nomes ou frases nominais. Esta é uma indicação de que ambas as palavras têm algo em comum e possivelmente podem ser sinônimos. O contexto também é muito importante quando se considera a estrutura gramatical em frases. A maioria das frases seguirá os paradigmas tradicionais de ter verbos seguindo os substantivos, os adjetivos precedem os substantivos, e assim por diante. Por esse motivo, o modelo é mais propenso a posicionar substantivos na mesma área geral que outros substantivos. O modelo possui um grande conjunto de dados de frases (Wikipédia em inglês, por exemplo) e produz vetores para cada palavra única no corpus. A saída de um modelo Word2Vec é chamada de embedding matrix.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis3.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis3.png)\n",
         "\n",
         "Esta embedding matrix conterá vetores para cada palavra distinta no corpus de treinamento. Tradicionalmente, as matrizes embedding podem conter mais de 3 milhões de vetores de palavras.\n",
         "\n",
@@ -170,13 +171,13 @@
         "\n",
         "A principal diferença entre as redes neurais feedforward e as recorrentes é o aspecto temporal. Em RNNs, cada palavra em uma sequência de entrada será associada a um passo de tempo específico. O número de etapas de tempo será igual ao comprimento máximo da sequência.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis18.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis18.png)\n",
         "\n",
         "Associado a cada passo de tempo há também um novo componente chamado vetor de estado oculto ht. A partir de um nível elevado, este vetor procura encapsular e resumir toda a informação que foi vista nas etapas do tempo anterior. Assim como xt é um vetor que encapsula todas as informações de uma palavra específica, ht é um vetor que resume informações de etapas de tempo anteriores.\n",
         "\n",
         "O estado oculto é uma função do vetor de palavras atual e do vetor de estado oculto no passo de tempo anterior. O sigma indica que a soma dos dois termos será colocada através de uma função de ativação.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis15.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis15.png)\n",
         "\n",
         "Os 2 \"W\" na fórmula acima representam matrizes de peso. Se você olhar atentamente, verá que há uma matriz de peso WX que vamos multiplicar com nossa entrada, e há uma matriz de peso recorrente WH que é multiplicado com o vetor de estado oculto no passo de tempo anterior. WH é uma matriz que permanece igual em todos os passos de tempo, e a matriz de peso WX é diferente para cada entrada.\n",
         "\n",
@@ -188,7 +189,7 @@
         "\n",
         "O vetor de estado oculto no passo de tempo final é alimentado em um classificador softmax binário onde é multiplicado por outra matriz de peso e colocada através de uma função softmax que produz valores entre 0 e 1, efetivamente nos dando as probabilidades de sentimentos positivos e negativos.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis16.png)"
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis16.png)"
       ]
     },
     {
@@ -210,13 +211,13 @@
       "source": [
         "As LSTMs são módulos que adicionamos às RNNs. Esses módulos garantem que o vetor de estado oculto h seja capaz de encapsular informações sobre dependências de longo prazo no texto. Como vimos na seção anterior, a formulação para h em RNNs tradicionais é relativamente simples. Essa abordagem não conseguirá efetivamente conectar informações que são separadas por mais de alguns passos de tempo. Podemos ilustrar essa ideia de lidar com dependências de longo prazo através de um exemplo pergunta/resposta. Vejamos o exemplo a seguir.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis4.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis4.png)\n",
         "\n",
         "Aqui, vemos que a frase do meio (The dog ran in the backyard) não teve impacto na pergunta que foi feita. No entanto, existe uma forte conexão entre a primeira e a terceira frases. Com um RNN clássico, o vetor de estado oculto no final da rede pode ter armazenado mais informações sobre a frase do cão do que sobre a primeira frase sobre o número. Basicamente, a adição de unidades LSTM permite determinar a informação correta e útil que precisa ser armazenada no vetor de estado oculto.\n",
         "\n",
         "Olhando para as unidades LSTM de um ponto de vista mais técnico, as unidades recebem o vetor de palavras atual xt e exibem o vetor de estado oculto ht. Nessas unidades, a formulação para ht será um pouco mais complexa do que a de uma RNN típica. O cálculo é dividido em 4 componentes, um portão de entrada, um portão de esquecimento, um portão de saída e um novo recipiente de memória.\n",
         "\n",
-        "![caption](Images/SentimentAnalysis10.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis10.png)\n",
         "\n",
         "Cada portão receberá xt e ht-1 (não mostrado na imagem) como entradas e executará algumas computações sobre elas para obter estados intermediários. Cada estado intermediário é alimentado em diferentes tubulações e, eventualmente, a informação é agregada para formar ht. Vale ressaltar que cada um desses portões pode ser considerado como diferentes módulos dentro do LSTM e cada um tem funções diferentes. O portão de entrada determina a quantidade de ênfase a colocar em cada uma das entradas, o portão de esquecimento determina a informação que descartaremos, e o portão de saída determinará o ht baseado nos estados intermediários. \n",
         "\n",
@@ -480,7 +481,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![caption](Images/SentimentAnalysis5.png)"
+        "**bold text**![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis5.png)"
       ]
     },
     {
@@ -643,7 +644,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "RFjxbqbpnESs",
         "colab_type": "code",
         "colab": {}
@@ -704,7 +704,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "MXvul8XonES0",
         "colab_type": "code",
         "colab": {}
@@ -807,7 +806,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "0vqufFVBnES8",
         "colab_type": "code",
         "colab": {}
@@ -858,7 +856,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "1WBWnVUwnES_",
         "colab_type": "code",
         "colab": {}
@@ -893,7 +890,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "fcxzymGynETE",
         "colab_type": "code",
         "colab": {}
@@ -952,7 +948,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "goe_r2ZonETK",
         "colab_type": "code",
         "colab": {}
@@ -994,12 +989,11 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![caption](Images/SentimentAnalysis12.png)"
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis12.png)"
       ]
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "ov5RHkROnETT",
         "colab_type": "code",
         "colab": {}
@@ -1032,12 +1026,11 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![caption](Images/SentimentAnalysis13.png)"
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis13.png)"
       ]
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "7Ir04YQKnETf",
         "colab_type": "code",
         "colab": {}
@@ -1072,7 +1065,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "kQWy15FInETi",
         "colab_type": "code",
         "colab": {}
@@ -1108,7 +1100,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "fLA4HwUlnETm",
         "colab_type": "code",
         "colab": {}
@@ -1136,7 +1127,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "SQ2m7a7GnETr",
         "colab_type": "code",
         "colab": {}
@@ -1161,7 +1151,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "BnYJjjkPnET1",
         "colab_type": "code",
         "colab": {}
@@ -1186,7 +1175,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "t6aLiAY7nET7",
         "colab_type": "code",
         "colab": {}
@@ -1336,8 +1324,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![caption](Images/SentimentAnalysis6.png)\n",
-        "![caption](Images/SentimentAnalysis7.png)"
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis6.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/LSTM/images/SentimentAnalysis7.png)"
       ]
     },
     {
@@ -1430,7 +1418,6 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "id": "2UaiFVyTnEUW",
         "colab_type": "code",
         "colab": {}
