--- a/LSTM/LSTM_Análise_de_Sentimentos.ipynb
+++ b/LSTM/LSTM_Análise_de_Sentimentos.ipynb
@@ -1535,9 +1535,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 170
         },
-        "outputId": "70876e2d-e977-42c2-af41-27b29192f627"
+        "outputId": "598c14ed-569a-4b0e-8159-7f6752f2ff63"
       },
       "cell_type": "code",
       "source": [
@@ -1561,7 +1561,7 @@
         "        print(\"Salvo em %s\" % save_path)\n",
         "writer.close()"
       ],
-      "execution_count": 0,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1571,7 +1571,10 @@
             "Salvo em models/pretrained_lstm.ckpt-30000\n",
             "Salvo em models/pretrained_lstm.ckpt-40000\n",
             "Salvo em models/pretrained_lstm.ckpt-50000\n",
-            "Salvo em models/pretrained_lstm.ckpt-60000\n"
+            "Salvo em models/pretrained_lstm.ckpt-60000\n",
+            "Salvo em models/pretrained_lstm.ckpt-70000\n",
+            "Salvo em models/pretrained_lstm.ckpt-80000\n",
+            "Salvo em models/pretrained_lstm.ckpt-90000\n"
           ],
           "name": "stdout"
         }
@@ -1632,7 +1635,11 @@
       "metadata": {
         "id": "AfOT4QZ4nEUO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "outputId": "4632a363-21aa-4d77-f7e6-21b526b513ef"
       },
       "cell_type": "code",
       "source": [
@@ -1640,8 +1647,24 @@
         "saver = tf.train.Saver()\n",
         "saver.restore(sess, tf.train.latest_checkpoint('models'))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Restoring parameters from models/pretrained_lstm.ckpt-90000\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/tensorflow/python/client/session.py:1702: UserWarning: An interactive session is already active. This can cause out-of-memory errors in some cases. You must explicitly call `InteractiveSession.close()` to release resources held by the other session(s).\n",
+            "  warnings.warn('An interactive session is already active. This can '\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "metadata": {
@@ -1657,7 +1680,11 @@
       "metadata": {
         "id": "aJGRJZBLnEUT",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "99979c38-14ea-42be-d76b-b8ceb3ee277e"
       },
       "cell_type": "code",
       "source": [
@@ -1666,8 +1693,25 @@
         "    nextBatch, nextBatchLabels = getTestBatch();\n",
         "    print(\"Acurácia para este batch:\", (sess.run(accuracy, {input_data: nextBatch, labels: nextBatchLabels})) * 100)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Acurácia para este batch: 70.83333134651184\n",
+            "Acurácia para este batch: 87.5\n",
+            "Acurácia para este batch: 95.83333134651184\n",
+            "Acurácia para este batch: 66.66666865348816\n",
+            "Acurácia para este batch: 91.66666865348816\n",
+            "Acurácia para este batch: 79.16666865348816\n",
+            "Acurácia para este batch: 75.0\n",
+            "Acurácia para este batch: 87.5\n",
+            "Acurácia para este batch: 79.16666865348816\n",
+            "Acurácia para este batch: 79.16666865348816\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
