--- a/tensorflow/TensorFlow_RegressaoLinear.ipynb
+++ b/tensorflow/TensorFlow_RegressaoLinear.ipynb
@@ -12,7 +12,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -49,28 +50,70 @@
       "metadata": {
         "id": "rjlRqK3-x7iX",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 496
+        },
+        "outputId": "f2801e80-71d0-4ba0-a4af-9b785e56018b"
       },
       "cell_type": "code",
       "source": [
-        "!wget vendas\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_training.csv\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_test.csv\n",
         "!mkdir datasets\n",
         "!mv *.csv datasets\n",
         "!ls -ilah datasets"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2019-01-25 11:36:09--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_training.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 30718 (30K) [text/plain]\n",
+            "Saving to: ‘vendas_data_training.csv’\n",
+            "\n",
+            "\rvendas_data_trainin   0%[                    ]       0  --.-KB/s               \rvendas_data_trainin 100%[===================>]  30.00K  --.-KB/s    in 0.005s  \n",
+            "\n",
+            "2019-01-25 11:36:09 (5.87 MB/s) - ‘vendas_data_training.csv’ saved [30718/30718]\n",
+            "\n",
+            "--2019-01-25 11:36:11--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_test.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 12401 (12K) [text/plain]\n",
+            "Saving to: ‘vendas_data_test.csv’\n",
+            "\n",
+            "vendas_data_test.cs 100%[===================>]  12.11K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2019-01-25 11:36:11 (115 MB/s) - ‘vendas_data_test.csv’ saved [12401/12401]\n",
+            "\n",
+            "total 64K\n",
+            "7602937 drwxr-xr-x 2 root root 4.0K Jan 25 11:36 .\n",
+            "1048583 drwxr-xr-x 1 root root 4.0K Jan 25 11:36 ..\n",
+            "7602936 -rw-r--r-- 1 root root  13K Jan 25 11:36 vendas_data_test.csv\n",
+            "7602934 -rw-r--r-- 1 root root  30K Jan 25 11:36 vendas_data_training.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "IFFmr5EFxqjD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1190
+        },
+        "outputId": "139c6154-2f25-422a-a477-8cce3b9228ab"
       },
       "cell_type": "code",
       "source": [
-        "# Versão 1 do Modelo\n",
-        "\n",
+        "# Regressão Linear\n",
         "\n",
         "import os\n",
         "import pandas as pd\n",
@@ -210,8 +253,84 @@
         "    print(\"Total Vendas Previsto de 1 Seguro: {}\".format(total_vendas_previsto))\n",
         "    print(\"Erro = : {}\".format(total_vendas_real - total_vendas_previsto))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Custo  em Treinamento: 0.0488654226064682\n",
+            "Custo  em Teste: 0.0554630383849144\n",
+            "\n",
+            "Custo  em Treinamento: 0.025116970762610435\n",
+            "Custo  em Teste: 0.02535189874470234\n",
+            "\n",
+            "Custo  em Treinamento: 0.013989842496812344\n",
+            "Custo  em Teste: 0.014566462486982346\n",
+            "\n",
+            "Custo  em Treinamento: 0.009870922192931175\n",
+            "Custo  em Teste: 0.011518307030200958\n",
+            "\n",
+            "Custo  em Treinamento: 0.006207464262843132\n",
+            "Custo  em Teste: 0.007250170689076185\n",
+            "\n",
+            "Custo  em Treinamento: 0.0034510623663663864\n",
+            "Custo  em Teste: 0.0035517446231096983\n",
+            "\n",
+            "Custo  em Treinamento: 0.0019189448794350028\n",
+            "Custo  em Teste: 0.002047560876235366\n",
+            "\n",
+            "Custo  em Treinamento: 0.0018107430078089237\n",
+            "Custo  em Teste: 0.001970861805602908\n",
+            "\n",
+            "Custo  em Treinamento: 0.001447812421247363\n",
+            "Custo  em Teste: 0.0015071139205247164\n",
+            "\n",
+            "Custo  em Treinamento: 0.0010817752918228507\n",
+            "Custo  em Teste: 0.0011774214217439294\n",
+            "\n",
+            "Custo  em Treinamento: 0.0008408092544414103\n",
+            "Custo  em Teste: 0.0009188618278130889\n",
+            "\n",
+            "Custo  em Treinamento: 0.000695361930411309\n",
+            "Custo  em Teste: 0.0007471963763237\n",
+            "\n",
+            "Custo  em Treinamento: 0.0005977857508696616\n",
+            "Custo  em Teste: 0.0006226154509931803\n",
+            "\n",
+            "Custo  em Treinamento: 0.0005244225612841547\n",
+            "Custo  em Teste: 0.000533961458131671\n",
+            "\n",
+            "Custo  em Treinamento: 0.000454825785709545\n",
+            "Custo  em Teste: 0.00045278348261490464\n",
+            "\n",
+            "Custo  em Treinamento: 0.00038805120857432485\n",
+            "Custo  em Teste: 0.00040213289321400225\n",
+            "\n",
+            "Custo  em Treinamento: 0.00032955603091977537\n",
+            "Custo  em Teste: 0.00034594806493259966\n",
+            "\n",
+            "Custo  em Treinamento: 0.0002786496188491583\n",
+            "Custo  em Teste: 0.0003081535978708416\n",
+            "\n",
+            "Custo  em Treinamento: 0.00023566478921566159\n",
+            "Custo  em Teste: 0.0002574346144683659\n",
+            "\n",
+            "Custo  em Treinamento: 0.00020123121794313192\n",
+            "Custo  em Teste: 0.0002247420634375885\n",
+            "\n",
+            "Treinamento Concluído\n",
+            "\n",
+            "Custo Final em Treinamento: 0.00017951703921426088\n",
+            "Custo Final em Teste: 0.00020255208073649555\n",
+            "\n",
+            "Total Vendas Real de 1 Seguro: 73960.0\n",
+            "Total Vendas Previsto de 1 Seguro: 75602.3046875\n",
+            "Erro = : -1642.3046875\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
