--- a/RNN/GAN01.ipynb
+++ b/RNN/GAN01.ipynb
@@ -6,13 +6,14 @@
       "name": "GAN01.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -60,7 +61,7 @@
         "\n",
         "Generative adversarial networks consistem de 2 modelos: modelo generativo e modelo discriminativo.\n",
         "\n",
-        "![caption](images/GAN_Overall.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/RNN/images/GAN_Overall.png)\n",
         "\n",
         "O modelo discriminativo é um classificador que determina se uma determinada imagem se parece com uma imagem real do conjunto de dados ou como uma imagem criada artificialmente. Este é basicamente um classificador binário que assumirá a forma de uma rede neural convolucional normal (CNN).\n",
         "\n",
@@ -83,38 +84,37 @@
       "metadata": {
         "id": "6LZvesk2LZ54",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "d1719d81-2e97-41c9-e8a6-5b38396a0443"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "8637dc0d-0d96-4991-da1b-deb9dde6132e"
       },
       "cell_type": "code",
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Thu Jan 24 15:53:03 2019       \r\n",
-            "+-----------------------------------------------------------------------------+\r\n",
-            "| NVIDIA-SMI 396.54                 Driver Version: 396.54                    |\r\n",
-            "|-------------------------------+----------------------+----------------------+\r\n",
-            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-            "|===============================+======================+======================|\r\n",
-            "|   0  TITAN X (Pascal)    Off  | 00000000:05:00.0 Off |                  N/A |\r\n",
-            "| 25%   44C    P8    16W / 250W |     10MiB / 12194MiB |      0%      Default |\r\n",
-            "+-------------------------------+----------------------+----------------------+\r\n",
-            "|   1  GeForce GTX 108...  Off  | 00000000:09:00.0 Off |                  N/A |\r\n",
-            "| 23%   36C    P8    17W / 250W |     10MiB / 11178MiB |      0%      Default |\r\n",
-            "+-------------------------------+----------------------+----------------------+\r\n",
-            "                                                                               \r\n",
-            "+-----------------------------------------------------------------------------+\r\n",
-            "| Processes:                                                       GPU Memory |\r\n",
-            "|  GPU       PID   Type   Process name                             Usage      |\r\n",
-            "|=============================================================================|\r\n",
-            "|  No running processes found                                                 |\r\n",
-            "+-----------------------------------------------------------------------------+\r\n"
+            "Fri Jan 25 13:25:49 2019       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 396.44                 Driver Version: 396.44                    |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   36C    P0    71W / 149W |   1115MiB / 11441MiB |      0%      Default |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                       GPU Memory |\n",
+            "|  GPU       PID   Type   Process name                             Usage      |\n",
+            "|=============================================================================|\n",
+            "+-----------------------------------------------------------------------------+\n"
           ],
           "name": "stdout"
         }
@@ -231,7 +231,7 @@
         "\n",
         "Nosso modelo discriminativo é uma rede neural convolucional que recebe uma imagem de tamanho 28 x 28 x 1 como entrada e retorna um único número escalar que descreve se a imagem de entrada é ou não \"real\" ou \"falsa\" - ou seja, seja desenhada do conjunto de imagens MNIST ou geradas pelo modelo generativo.\n",
         "\n",
-        "![caption](images/GAN_Discriminator.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/RNN/images/GAN_Discriminator.png)\n",
         "\n",
         "A estrutura do nosso modelo modelo discriminativo é baseada em [TensorFlow's sample CNN classifier model](https://www.tensorflow.org/get_started/mnist/pros). Possui duas camadas convolucionais que encontram recursos de 5x5 pixels e duas camadas \"totalmente conectadas\" que multiplicam pesos por cada pixel na imagem.\n",
         "\n",
@@ -298,7 +298,7 @@
       "source": [
         "## Generator Network\n",
         "\n",
-        "![caption](images/GAN_Generator.png)\n",
+        "![caption](https://github.com/vladimiralencar/DeepLearning-LANA/raw/master/RNN/images/GAN_Generator.png)\n",
         "\n",
         "Agora que temos o nosso modelo discriminativo definido, vamos dar uma olhada no modelo generativo. \n",
         "\n",
