--- a/tensorflow/TensorFlow_RegressaoLinear_v02.ipynb
+++ b/tensorflow/TensorFlow_RegressaoLinear_v02.ipynb
@@ -12,7 +12,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -49,24 +50,66 @@
       "metadata": {
         "id": "lLHIiLTskoHA",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 496
+        },
+        "outputId": "d15866fd-f0ac-4a38-c04b-b67230d3b23c"
       },
       "cell_type": "code",
       "source": [
-        "!wget\n",
-        "!wget\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_training.csv\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_test.csv\n",
         "!mkdir datasets\n",
         "!mv *.csv datasets\n",
         "!ls -ilah datasets"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2019-01-25 15:15:40--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_training.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 30718 (30K) [text/plain]\n",
+            "Saving to: ‘vendas_data_training.csv’\n",
+            "\n",
+            "\rvendas_data_trainin   0%[                    ]       0  --.-KB/s               \rvendas_data_trainin 100%[===================>]  30.00K  --.-KB/s    in 0.007s  \n",
+            "\n",
+            "2019-01-25 15:15:40 (4.24 MB/s) - ‘vendas_data_training.csv’ saved [30718/30718]\n",
+            "\n",
+            "--2019-01-25 15:15:42--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/tensorflow/data/vendas_data_test.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 12401 (12K) [text/plain]\n",
+            "Saving to: ‘vendas_data_test.csv’\n",
+            "\n",
+            "vendas_data_test.cs 100%[===================>]  12.11K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2019-01-25 15:15:42 (95.9 MB/s) - ‘vendas_data_test.csv’ saved [12401/12401]\n",
+            "\n",
+            "total 64K\n",
+            "19399414 drwxr-xr-x 2 root root 4.0K Jan 25 15:15 .\n",
+            " 1048583 drwxr-xr-x 1 root root 4.0K Jan 25 15:15 ..\n",
+            "19399413 -rw-r--r-- 1 root root  13K Jan 25 15:15 vendas_data_test.csv\n",
+            "19399411 -rw-r--r-- 1 root root  30K Jan 25 15:15 vendas_data_training.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "MWRv3tH1jyH1",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "b98d0442-000f-49fa-83a7-491bd0206b52"
       },
       "cell_type": "code",
       "source": [
@@ -232,8 +275,25 @@
         "    save_path = saver.save(session, \"modelos/modelo_treinado_v2.ckpt\") # checkpoint\n",
         "    print(\"\\nModelo salvo: {}\".format(save_path))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Treinamento Concluído\n",
+            "\n",
+            "Custo Final em Treinamento: 0.00017210739315487444\n",
+            "Custo Final em Teste: 0.00026958619127981365\n",
+            "\n",
+            "Total Vendas Real de 1 Seguro: 247537.0\n",
+            "Total Vendas Previsto de 1 Seguro: 251262.796875\n",
+            "\n",
+            "Modelo salvo: modelos/modelo_treinado_v2.ckpt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -249,7 +309,11 @@
       "metadata": {
         "id": "s1KOG19BkdBb",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "9900ab7f-a25a-4756-f55a-7d49d052d876"
       },
       "cell_type": "code",
       "source": [
@@ -289,8 +353,24 @@
         "    # save_path = saver.save(session, \"modelos/modelo_treinado_v2.ckpt\")\n",
         "    # print(\"\\nModelo salvo: {}\".format(save_path))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Restoring parameters from modelos/modelo_treinado_v2.ckpt\n",
+            "\n",
+            "Modelo Restaurado\n",
+            "\n",
+            "Custo Final em Treinamento: 0.00017210739315487444\n",
+            "Custo Final em Teste: 0.00026958619127981365\n",
+            "\n",
+            "Total Vendas Real de 1 Seguro: 247537.0\n",
+            "Total Vendas Previsto de 1 Seguro: 251262.796875\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
