--- a/keras/Analisa_Acuracia_Modelos.ipynb
+++ b/keras/Analisa_Acuracia_Modelos.ipynb
@@ -6,13 +6,14 @@
       "name": "Analisa-Acuracia-Modelos.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -43,17 +44,79 @@
     },
     {
       "metadata": {
+        "id": "QtLsMuB18zNF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 578
+        },
+        "outputId": "bd297578-b2ce-4f68-d803-14056e43b0fe"
+      },
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2019-01-29 23:33:22--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 26840 (26K) [text/plain]\n",
+            "Saving to: ‘dataset.csv’\n",
+            "\n",
+            "dataset.csv         100%[===================>]  26.21K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2019-01-29 23:33:27 (2.60 MB/s) - ‘dataset.csv’ saved [26840/26840]\n",
+            "\n",
+            "--2019-01-29 23:33:28--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 19608 (19K) [application/octet-stream]\n",
+            "Saving to: ‘model.h5’\n",
+            "\n",
+            "model.h5            100%[===================>]  19.15K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2019-01-29 23:33:28 (1.93 MB/s) - ‘model.h5’ saved [19608/19608]\n",
+            "\n",
+            "--2019-01-29 23:33:29--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1826 (1.8K) [text/plain]\n",
+            "Saving to: ‘model.json’\n",
+            "\n",
+            "model.json          100%[===================>]   1.78K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2019-01-29 23:33:29 (275 MB/s) - ‘model.json’ saved [1826/1826]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "zGLPXJF-8XJr",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "aeb420c5-07ca-4c9d-ecca-01a11b67e8a8"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "cf516f29-862b-4ccb-c489-1c7709793892"
       },
       "cell_type": "code",
       "source": [
         "df = pd.read_csv('dataset.csv')\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +241,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -186,8 +249,11 @@
       "metadata": {
         "id": "CEM00gtf8XJ0",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "fa6f29d6-fcd3-4775-e864-caaa8f328a0c"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "fa19cbad-58fb-4aa9-fb39-64174681f2c0"
       },
       "cell_type": "code",
       "source": [
@@ -208,7 +274,7 @@
         "df['classe'] = classes\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +399,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -341,8 +407,11 @@
       "metadata": {
         "id": "TQtA-jV28XJ6",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "77bd55bb-217f-4337-dac2-1738d4aa3d2c"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "d0fb8259-70e2-4014-ef65-8e602f37959d"
       },
       "cell_type": "code",
       "source": [
@@ -350,7 +419,7 @@
         "X = df.loc[:, atributos].values\n",
         "X[:3]"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +436,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -375,14 +444,17 @@
       "metadata": {
         "id": "R5dNQpoO8XJ_",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6e9d059f-5aa7-4bcf-9d35-5c7411d3578e"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9a9e3e4f-ea7e-46a7-d355-238ad25abf94"
       },
       "cell_type": "code",
       "source": [
         "y[:3]"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +466,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -402,14 +474,17 @@
       "metadata": {
         "id": "1SarlxwU8XKD",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "c49b5b7b-fb59-4802-f828-0ad65973f89e"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e276c486-378c-4227-9644-a998fecef4a5"
       },
       "cell_type": "code",
       "source": [
         "len(X)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +496,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -456,27 +531,30 @@
       "metadata": {
         "id": "nXjcynsm8XKR",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "dc79dd37-71df-42ce-a24c-75140c51a86b"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "76a6139d-25bb-4843-b844-e51ee52bfe4b"
       },
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'1.0.0'"
+              "'1.12.0'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -523,24 +601,22 @@
       "metadata": {
         "id": "HiiAfbyO8XKh",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "61e4caa4-8a2d-4a0b-fde8-3b79fba08989"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3c15fb1c-ddb0-4b25-ba81-56664c2d3a7f"
       },
       "cell_type": "code",
       "source": [
         "!conda env list"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "# conda environments:\r\n",
-            "#\r\n",
-            "base                     /Users/vladimiralencar/anaconda3\r\n",
-            "tf                       /Users/vladimiralencar/anaconda3/envs/tf\r\n",
-            "tf36                  *  /Users/vladimiralencar/anaconda3/envs/tf36\r\n",
-            "\r\n"
+            "/bin/bash: conda: command not found\n"
           ],
           "name": "stdout"
         }
@@ -550,26 +626,37 @@
       "metadata": {
         "id": "v15kH6sE8XKm",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3771a71a-9435-4b1f-aff4-76f8625de9c9"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "008a1cec-9ec4-40e6-d5b1-500176f41d00"
       },
       "cell_type": "code",
       "source": [
         "import keras\n",
         "keras.__version__"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'keras'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-98cd3281928c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.2.4'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     },
@@ -577,8 +664,11 @@
       "metadata": {
         "id": "QXpYxLDr8XKv",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5556e0c9-c9ee-47a6-cb66-2a136502a5d9"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "95ee2529-3f16-45ac-a050-86eaf9232dfe"
       },
       "cell_type": "code",
       "source": [
@@ -610,22 +700,15 @@
         "score = loaded_model.evaluate(X, y, verbose=0)\n",
         "print(\"%s: %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "0",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-4979fedf83f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mloaded_model_json\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#json_file.close()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mloaded_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloaded_model_json\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# load weights into new model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/models.py\u001b[0m in \u001b[0;36mmodel_from_json\u001b[0;34m(json_string, custom_objects)\u001b[0m\n",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/layers/__init__.py\u001b[0m in \u001b[0;36mdeserialize\u001b[0;34m(config, custom_objects)\u001b[0m\n",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/utils/generic_utils.py\u001b[0m in \u001b[0;36mdeserialize_keras_object\u001b[0;34m(identifier, module_objects, custom_objects, printable_module_name)\u001b[0m\n",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/models.py\u001b[0m in \u001b[0;36mfrom_config\u001b[0;34m(cls, config, custom_objects)\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 0"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Loaded model from disk\n",
+            "acc: 91.02%\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
